# Team02-RaspberryPi

./: .clang-format  .env  .gitignore  .gitmodules  CMakeLists.txt  README-not-oficial.md  README.md  README2.md  test.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  bug-template.yml  config.yml  epic-template.yml  feature-request.yml  story-template.yml  task-template.yml
.github/workflows/: clang-format-check.yml  clang-tidy-check.yml  deploy.yml  label-priority.yml  restrict-pr-to-main.yml
Cluster/include/: InstrumentCluster.hpp
Cluster/src/: main.cpp
Cluster/src/publisher/lanes-publisher/: CMakeLists.txt  lanes_publisher.cpp
Cluster/src/publisher/objects-publisher/: object_publisher.cpp
Cluster/src/publisher/warning-publisher/: CMakeLists.txt
Cluster/tests/: InstrumentClusterTest.cpp  InstrumentClusterTest.hpp
Cluster/ui/: GearDisplay.qml  Main.qml  NotificationBlock.qml  SignDetector.qml  SpeedDisplay.qml
Clusters/HandCluster/: CMakeLists.txt
Clusters/HandCluster/include/: InstrumentCluster.hpp
Clusters/HandCluster/src/: InstrumentCluster.cpp  main.cpp
Clusters/HandCluster/src/publisher/: CMakeLists.txt  lanes_publisher.cpp
Clusters/HandCluster/src/publisher/signs-publisher/: object_publisher.cpp
Clusters/HandCluster/src/publisher/warning-publisher/: warning_publisher.cpp
Clusters/HandCluster/tests/: InstrumentClusterTest.cpp  InstrumentClusterTest.hpp
Clusters/HandCluster/ui/: BatteryIndicator.qml  GearDisplay.qml  GearShiftInfo.qml  LaneLines.qml  LightInfo.qml  Main.qml  NotificationBlock.qml  ObjectDetector.qml  SignDetector.qml  SpeedDisplay.qml  TimeInfo.qml  TurnSignalLeft.qml  TurnSignalRight.qml  resources.qrc
Clusters/InstrumentCluster/: CMakeLists.txt
Clusters/InstrumentCluster/ui/: FootbarInfo.qml  GearShiftInfo.qml  LightInfo.qml  Main.qml  TurnSignalLeft.qml  TurnSignalRight.qml
Clusters/include/: InstrumentCluster.hpp
Clusters/src/: InstrumentCluster.cpp
MiddleWare/: CMakeLists.txt  middleWare.json
MiddleWare/src/: can-id-reference-table.md  main.cpp
ZenohConfig/: InstrumentClusterConfig.json
deploy/: README.md
deploy/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
deploy/deployLocal/: CMakeLists.txt  deployLocal.sh
deploy/dockerfiles/: DockerFileRasp  DockerfileDeployRasp
deploy/scripts/: deployToRasp.sh
deployLocal/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  test.sh  zenoh-test.conf
deployLocal/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
deployLocal/Clusters/HandCluster/ui/: resources.qrc.depends
deployLocal/HandClusterB_autogen/: moc_predefs.h  mocs_compilation.cpp
deployLocal/HandClusterB_autogen/WXN6BV4KDC/: moc_InstrumentCluster.cpp.d
deployLocal/MiddleWareApp_autogen/: moc_predefs.h
docs/guidelines/: GeneralGuidelines.md  clang-install-guidelines.md
include/: CANBusHandler.hpp  InstrumentCluster.hpp
middelWare/src/: main.cpp
src/: CANBusHandler.cpp  FootbarInfo.qml  InstrumentCluster.cpp  Main.qml  main.cpp  resources.qrc
tests/: CMakeLists.txt  test.sh
ui/: FootbarInfo.qml  GearShiftInfo.qml  LightInfo.qml  Main.qml  SpeedDisplay.qml  TimeInfo.qml  TurnSignalLeft.qml  TurnSignalRight.qml  TurnSignals.qml  resources.qrc
